--- a/dev/assets/styles/parts/_ui.scss
+++ b/dev/assets/styles/parts/_ui.scss
@@ -14,4 +14,7 @@
 @import './ui/arrow';
 @import './ui/slider-btns';
 @import './ui/sorting';
+@import './ui/tag';
 @import './ui/count-objects';
+@import './ui/compare-btn';
+@import './ui/checkbox';
