--- a/dev/pages/include/components/property-details.html
+++ b/dev/pages/include/components/property-details.html
@@ -8,7 +8,9 @@
         <ul class="property-details__list list-reset">
             <li class="property-details__li">
                 <span class="property-details__name-property">Object ID</span>
-                <span class="property-details__value-property">1024461853</span>
+                <span class="property-details__value-property">
+                    <a href="#" class="link-reset">1024461853</a>
+                </span>
             </li>
             <li class="property-details__li">
                 <span class="property-details__name-property">Gross m²</span>
