--- a/dev/pages/include/components/side-panel.html
+++ b/dev/pages/include/components/side-panel.html
@@ -1,4 +1,6 @@
 <div class="side-panel">
-    @include('./commercial-block.html')
-    @include('./need-help.html')
+    <div class="side-panel__content">
+        @include('./commercial-block.html')
+        @include('./need-help.html')
+    </div>
 </div>
