--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -21,3 +21,4 @@
 @import './components/side-panel';
 @import './components/property-details';
 @import './components/other-features';
+@import './components/infrastructure';
