--- a/dev/assets/styles/parts/components/share.scss
+++ b/dev/assets/styles/parts/components/share.scss
@@ -9,6 +9,7 @@
 
     &__block-content {
         position: absolute;
+        z-index: 5;
         top: 100%;
         left: 50%;
         transform: translate(-50%, 10px);
