--- a/dev/pages/include/components/other-features.html
+++ b/dev/pages/include/components/other-features.html
@@ -9,7 +9,79 @@
             <span class="other-features__name-feature">Exterior Features</span>
             <ul class="other-features__list list-reset">
                 <li class="other-features__li">
-
+                    @include('../ui/tag.html', {
+                        "text": "Garden"
+                    })
+                </li>
+            </ul>
+        </div>
+        <div class="other-features__block-feature">
+            <span class="other-features__name-feature">Exterior Features</span>
+            <ul class="other-features__list list-reset">
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": " Cinema / Theater"
+                    })
+                </li>
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "Dry cleaner"
+                    })
+                </li>
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "Barber"
+                    })
+                </li>
+            </ul>
+        </div>
+        <div class="other-features__block-feature">
+            <span class="other-features__name-feature">Exterior Features</span>
+            <ul class="other-features__list list-reset">
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "North"
+                    })
+                </li>
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "South"
+                    })
+                </li>
+            </ul>
+        </div>
+        <div class="other-features__block-feature">
+            <span class="other-features__name-feature">Exterior Features</span>
+            <ul class="other-features__list list-reset">
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "City"
+                    })
+                </li>
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "Street"
+                    })
+                </li>
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "River"
+                    })
+                </li>
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "Nature"
+                    })
+                </li>
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "Throat"
+                    })
+                </li>
+                <li class="other-features__li">
+                    @include('../ui/tag.html', {
+                        "text": "Pool"
+                    })
                 </li>
             </ul>
         </div>
