light pages have been made + pagination + 2 types of residential complex cards have not been completed

--- a/dev/assets/styles/libs/modal.scss
+++ b/dev/assets/styles/libs/modal.scss
@@ -94,6 +94,8 @@
 
         use {
             stroke: $navy-blue;
+            stroke-width: 1.5;
+            stroke-lineCap:round;
         }
     }
 
