--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -29,6 +29,12 @@ body {
 @import './pages/main-page.scss';
 @import './pages/property-page.scss';
 @import './pages/detailed-card-page.scss';
+@import './pages/page-not-found-page.scss';
+@import './pages/privacy-policy-page.scss';
+@import './pages/terms-of-use-page.scss';
+@import './pages/search-result-page.scss';
+@import './pages/search-no-result-page.scss';
+@import './pages/property-map-page.scss';
 
 @import './parts/layouts';
 @import './parts/components';
