--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -22,3 +22,5 @@
 @import './components/property-details';
 @import './components/other-features';
 @import './components/infrastructure';
+@import './components/text-document';
+@import './components/bread-crumbs';
