--- a/dev/pages/include/ui/compare-btn.html
+++ b/dev/pages/include/ui/compare-btn.html
@@ -1,6 +1,6 @@
-<button type="button" class="compare-btn">
+<button type="button" class="compare-btn compare-btn--theme--gray">
     <svg class="compare-btn__icon">
-        <use xlink:href="./assets/icons/sprite-svg.svg#check-mark"/>
+        <use xlink:href="./assets/icons/sprite-svg.svg#btn-Check"/>
     </svg>
     <span class="compare-btn__text">Compare</span>
 </button>
