--- a/dev/assets/styles/parts/components/product-card.scss
+++ b/dev/assets/styles/parts/components/product-card.scss
@@ -18,7 +18,6 @@
 
     &__block-images {
         position: relative;
-        overflow: hidden;
         height: 218px;
         border-radius: 8px 8px 0 0;
     }
@@ -28,6 +27,7 @@
         height: 100%;
         object-fit: cover;
         object-position: center;
+        border-radius: 8px 8px 0 0;
     }
 
     &__wrapper-label-quantity {
@@ -204,12 +204,106 @@
         display: flex;
         justify-content: space-between;
 
-        &:not(:first-child) {
-            margin-top: 8px;
-        }
+        &:first-child {
+            .btn {
+                width: 100%;
 
-        .product-card__btn-compare {
-            width: 192px;
+                &:not(:first-child) {
+                    margin-left: 7px;
+                }
+            }
+        }
+    }
+
+    &--type--apartment {
+        .product-card {
+            &__block-btns {
+                display: flex;
+                justify-content: space-between;
+        
+                &:not(:first-child) {
+                    margin-top: 8px;
+        
+                    .btn-icon,
+                    .share {
+                        margin-left: 7px;
+                    }
+        
+                    .share {
+                        .btn-icon {
+                            margin-left: 0;
+                        }
+                    }
+                }
+        
+                .compare-btn {
+                    width: 100%;
+                }
+        
+                .btn-icon {
+                    flex-shrink: 0;
+                }
+            }
+        }
+    }
+
+    &--type--residential-complex {
+        .product-card {
+            &__address {
+                @include adaptiv-font(22, 14);
+                font-weight: 600;
+                margin-top: 0;
+            }
+
+            &__price {
+                margin-top: 10px;
+                @include adaptiv-font(16, 10);
+            }
+
+            &__block-links {
+                margin-top: 12px;
+            }
+
+            &__list-links {
+                display: flex;
+                align-items: center;
+                // white-space: nowrap;
+                overflow: hidden;
+                width: 10%;
+                // text-overflow: ellipsis;
+            }
+
+            &__li-link {
+                &:not(:last-child):after {
+                    content: ',';
+                    margin-right: 3px;
+                    margin-left: -3px;
+                    color: $navy-blue;
+                }
+            }
+
+            &__block-btns {
+                display: flex;
+                justify-content: space-between;
+        
+                &:not(:first-child) {
+                    margin-top: 8px;
+        
+                    .share {
+                        width: 100%;
+                        margin-left: 7px;
+
+                        .btn-icon {
+                            margin-left: 0;
+                        }
+                    }
+                }
+        
+                .btn-icon {
+                    flex-shrink: 1;
+                    width: 100%;
+                }
+            }
         }
     }
 
