--- a/dev/pages/include/components/product-card.html
+++ b/dev/pages/include/components/product-card.html
@@ -1,37 +1,8 @@
-<div class="product-card">
+
+
+<div class="product-card product-card--type--residential-complex"> 
     <div class="product-card__block-images">
         @include('../ui/favorites-icon.html')
-        <div class="status-labels">
-            <ul class="status-labels__list list-reset">
-                <li class="status-labels__li">
-                    <div class="status-label status-label--theme--coral">
-                        <span class="status-label__text">new</span>
-                    </div>
-                </li>
-                <li class="status-labels__li">
-                    <div class="status-label status-label--theme--green">
-                        <span class="status-label__text">avaliable</span>
-                    </div>
-                </li>
-                <li class="status-labels__li">
-                    <div class="status-label status-label--theme--navy-blue">
-                        <span class="status-label__text">sold</span>
-                    </div>
-                </li>
-                <li class="status-labels__li">
-                    <div class="status-label status-label--theme--purple">
-                        <span class="status-label__text">foreclosure</span>
-                    </div>
-                </li>
-                <li class="status-labels__li">
-                    <div class="status-label status-label--theme--green">
-                        <svg class="status-label__icon">
-                            <use xlink:href="./assets/icons/sprite-svg.svg#ellipsis"/>
-                        </svg>
-                    </div>
-                </li>
-            </ul>
-        </div>
         <div class="product-card__wrapper-label-quantity">
             <div class="product-card__block-label-quantity">
                 <div class="product-card__label-quantity">
@@ -42,18 +13,18 @@
                 </div>
             </div>
             <div class="product-card__block-label-quantity">
-                <div class="product-card__label-quantity">
+                <a href="#" class="product-card__label-quantity hint">
                     <svg class="product-card__label-quantity-icon">
-                        <use xlink:href="./assets/icons/sprite-svg.svg#bed"/>
+                        <use xlink:href="./assets/icons/sprite-svg.svg#3D"/>
                     </svg>
-                    <span class="product-card__label-quantity-count">8</span>
-                </div>
-                <div class="product-card__label-quantity">
+                    <span class="hint__text">3D tour</span>
+                </a>
+                <a href="#" class="product-card__label-quantity hint">
                     <svg class="product-card__label-quantity-icon">
-                        <use xlink:href="./assets/icons/sprite-svg.svg#bathtub"/>
+                        <use xlink:href="./assets/icons/sprite-svg.svg#play"/>
                     </svg>
-                    <span class="product-card__label-quantity-count">3</span>
-                </div>
+                    <span class="hint__text">Watch the video</span>
+                </a>
             </div>
         </div>
         <img src="./assets/images/card-1.jpg" class="product-card__image" alt="">
@@ -61,20 +32,32 @@
     </div>
     <div class="product-card__block-content">
         <div class="product-card__block-info">
-            <span class="product-card__price">5,125,000 TL</span>
-            <div class="affiliation-label affiliation-label--theme--light-colar">
-                <span class="affiliation-label__text">For Rent</span>
-            </div>
-            <span class="product-card__address">227 Major Macke</span>
+            <span class="product-card__address">Sunrise Residence</span>
+            <span class="product-card__price">from 5,125,000 TL</span>
         </div>
         <div class="product-card__block-links">
             <ul class="product-card__list-links list-reset">
                 <li class="product-card__li-link">
                     <a href="#" class="product-card__links-link link-reset">Harding</a>
                 </li>
+                <!-- <li class="product-card__li-link">
+                    <a href="#" class="product-card__links-link link-reset">Richmond Hill</a>
+                </li>
                 <li class="product-card__li-link">
                     <a href="#" class="product-card__links-link link-reset">Richmond Hill</a>
                 </li>
+                <li class="product-card__li-link">
+                    <a href="#" class="product-card__links-link link-reset">Richmond Hill</a>
+                </li>
+                <li class="product-card__li-link">
+                    <a href="#" class="product-card__links-link link-reset">Richmond Hill</a>
+                </li>
+                <li class="product-card__li-link">
+                    <a href="#" class="product-card__links-link link-reset">Richmond Hill</a>
+                </li>
+                <li class="product-card__li-link">
+                    <a href="#" class="product-card__links-link link-reset">Richmond Hill</a>
+                </li> -->
             </ul>
         </div>
         <div class="product-card__wrapper-employee">
@@ -101,9 +84,6 @@
                 </a>
             </div>
             <div class="product-card__block-btns">
-                <a href="#" class="product-card__btn-compare btn btn--size-sm btn--theme--transparent">
-                    <span class="btn__text">Compare</span>
-                </a>
                 <a href="#" class="btn-icon">
                     <svg class="btn-icon__icon">
                         <use xlink:href="./assets/icons/sprite-svg.svg#point"/>
