input + textarea + modal windows with forms are made

--- a/dev/assets/styles/parts/_modal-windows.scss
+++ b/dev/assets/styles/parts/_modal-windows.scss
@@ -1,1 +1,3 @@
-@import './modal-windows/more-filters'
+@import './modal-windows/more-filters';
+@import './modal-windows/simple-info';
+@import './modal-windows/m-form';
