--- a/dev/assets/styles/parts/_ui.scss
+++ b/dev/assets/styles/parts/_ui.scss
@@ -18,3 +18,5 @@
 @import './ui/count-objects';
 @import './ui/compare-btn';
 @import './ui/checkbox';
+@import './ui/input';
+@import './ui/textarea';
