--- a/dev/pages/include/components/share.html
+++ b/dev/pages/include/components/share.html
@@ -7,7 +7,9 @@
     <div class="share__block-content">
         @include('../components/social-buttons.html')
         <div class="share__block-link">
-            <!-- input.share__input-link -->
+            <div class="input">
+                <input type="text" class="input__input" value="https://statusproperty.ru/products/sale">
+            </div>
             <a href="#" class="share__link link-reset">Copy link</a>
         </div>
     </div>
