--- a/dev/assets/styles/_classes.scss
+++ b/dev/assets/styles/_classes.scss
@@ -47,6 +47,8 @@ a {
 
     &__title {
         text-transform: uppercase;
+        font-weight: 500;
+        letter-spacing: 1px;
     }
 
     &__box {
