--- a/dev/assets/styles/parts/components/card-section.scss
+++ b/dev/assets/styles/parts/components/card-section.scss
@@ -183,7 +183,7 @@
 
     &__wrapper-cards {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(4, minmax(162px, 1fr));
         grid-column-gap: 30px;
         grid-row-gap: 30px;
     }
