--- a/dev/pages/include/ui/select.html
+++ b/dev/pages/include/ui/select.html
@@ -1,8 +1,20 @@
-<div class="select">
-    <button type="button" class="select__btn">
-        <span class="select__btn-text">@title</span>
-        <svg class="select__btn-icon">
-            <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"/>
-        </svg>
-    </button>
+<div class="select search-bar__select-residential" data-select="block-select">
+    <div class="select__inner">
+        <button type="button" class="select__btn" data-select="btn">
+            <span class="select__btn-text">Residential</span>
+            <svg class="select__btn-icon">
+                <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
+            </svg>
+        </button>
+        <div class="select__block-pop-up">
+            <ul class="select__list list-reset">
+                <li class="select__li">
+                    <a href="#" class="select__link link-reset">Residential</a>
+                </li>
+                <li class="select__li">
+                    <a href="#" class="select__link link-reset">Commercial</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
