--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -24,3 +24,4 @@
 @import './components/infrastructure';
 @import './components/text-document';
 @import './components/bread-crumbs';
+@import './components/compare-bar';
