--- a/dev/assets/styles/parts/components/card-section.scss
+++ b/dev/assets/styles/parts/components/card-section.scss
@@ -148,6 +148,8 @@
     }
 
     &__block-head {
+        position: relative;
+        z-index: 5;
         display: flex;
         align-items: center;
         justify-content: space-between;
