the desktop bar with sorting has been completed + the desktop pages developers have been made

--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -35,6 +35,7 @@ body {
 @import './pages/search-result-page.scss';
 @import './pages/search-no-result-page.scss';
 @import './pages/property-map-page.scss';
+@import './pages/developers-page.scss';
 
 @import './parts/layouts';
 @import './parts/components';
