--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -25,3 +25,5 @@
 @import './components/text-document';
 @import './components/bread-crumbs';
 @import './components/compare-bar';
+@import './components/developer-card';
+@import './components/text-block';
