--- a/dev/pages/include/ui/toggle-property.html
+++ b/dev/pages/include/ui/toggle-property.html
@@ -1,4 +1,4 @@
-<div class="toggle-property">
+<div class="toggle-property" data-toggle-Property="block-toggle-property">
     <div class="toggle-property__block-property">
         <span class="toggle-property__name-property">For Rent</span>
     </div>
