--- a/dev/assets/styles/parts/ui/select.scss
+++ b/dev/assets/styles/parts/ui/select.scss
@@ -47,7 +47,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: $white;
+        background-color: transparent;
         border: none;
         border-radius: 10px;
         min-height: 48px;
